--- a/experiment_1/src/app.ipynb
+++ b/experiment_1/src/app.ipynb
@@ -270,8 +270,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T10:49:42.157898Z",
-     "start_time": "2024-11-28T10:49:40.079338Z"
+     "end_time": "2024-11-28T13:54:12.712114Z",
+     "start_time": "2024-11-28T13:54:08.607395Z"
     }
    },
    "cell_type": "code",
@@ -280,7 +280,8 @@
     "test_loss = 0.0\n",
     "predictions = []\n",
     "actuals = []\n",
-    "mse_per_feature = [0.0] * output_size\n",
+    "mse_per_feature = [0.0] * output_size  # MSE for each feature\n",
+    "variance_per_feature = [0.0] * output_size  # Variance for each feature\n",
     "\n",
     "# Disable gradient computation for evaluation\n",
     "with torch.no_grad():\n",
@@ -291,21 +292,19 @@
     "        predictions.append(output.cpu())\n",
     "        actuals.append(y_batch.cpu())\n",
     "        \n",
-    "        # Compute MSE for each feature\n",
+    "         # Compute MSE and variance for each feature\n",
     "        for i in range(output_size):\n",
     "            mse_per_feature[i] += nn.functional.mse_loss(output[:, i], y_batch[:, i], reduction='sum').item()\n",
+    "            variance_per_feature[i] += torch.sum((y_batch[:, i] - torch.mean(y_batch[:, i]))**2).item()\n",
     "\n",
     "# Calculate average test loss\n",
     "test_loss /= len(test_loader) \n",
     "print(f\"Test Loss: {test_loss:.5f}\")\n",
     "\n",
-    "# Calculate average MSE for each feature\n",
-    "num_samples = len(test_loader.dataset)\n",
+    "# Average MSE and Variance over the dataset\n",
+    "num_samples = len(test_loader)\n",
     "mse_per_feature = [mse / num_samples for mse in mse_per_feature]\n",
-    "\n",
-    "# Print MSE for each feature\n",
-    "for i, mse in enumerate(mse_per_feature):\n",
-    "    print(f\"MSE for feature {i}: {mse:.5f}\")\n",
+    "variance_per_feature = [var / num_samples for var in variance_per_feature]\n",
     "\n",
     "# Post-processing predictions and actuals for inverse scaling\n",
     "predictions = torch.cat(predictions).numpy()\n",
@@ -314,6 +313,16 @@
     "# Inverse transform OHLCV values\n",
     "predictions_original = pp.scaler.inverse_transform(predictions)\n",
     "actuals_original = pp.scaler.inverse_transform(actuals)\n",
+    "\n",
+    "# Print and compare MSE and Variance for each feature\n",
+    "feature_names = ['Open', 'High', 'Low', 'Close', 'Volume']\n",
+    "print(\"\\nComparison of MSE and Variance for each feature:\")\n",
+    "for i, (mse, var) in enumerate(zip(mse_per_feature, variance_per_feature)):\n",
+    "    print(f\"{feature_names[i]}: MSE = {mse:.5f}, Variance = {var:.5f}\")\n",
+    "    if mse < var:\n",
+    "        print(f\"  -> The model performs better than a mean-based prediction for {feature_names[i]}.\")\n",
+    "    else:\n",
+    "        print(f\"  -> The model does not outperform a mean-based prediction for {feature_names[i]}.\")\n",
     "\n",
     "# Print sample predictions and actual values\n",
     "for i in range(5):\n",
@@ -348,11 +357,18 @@
      "output_type": "stream",
      "text": [
       "Test Loss: 0.00120\n",
-      "MSE for feature 0: 0.00113\n",
-      "MSE for feature 1: 0.00171\n",
-      "MSE for feature 2: 0.00121\n",
-      "MSE for feature 3: 0.00167\n",
-      "MSE for feature 4: 0.00016\n",
+      "\n",
+      "Comparison of MSE and Variance for each feature:\n",
+      "Open: MSE = 0.03589, Variance = 0.10168\n",
+      "  -> The model performs better than a mean-based prediction for Open.\n",
+      "High: MSE = 0.05428, Variance = 0.09563\n",
+      "  -> The model performs better than a mean-based prediction for High.\n",
+      "Low: MSE = 0.03833, Variance = 0.10446\n",
+      "  -> The model performs better than a mean-based prediction for Low.\n",
+      "Close: MSE = 0.05300, Variance = 0.10110\n",
+      "  -> The model performs better than a mean-based prediction for Close.\n",
+      "Volume: MSE = 0.00498, Variance = 0.00157\n",
+      "  -> The model does not outperform a mean-based prediction for Volume.\n",
       "Date: 2021-04-05\n",
       "Sample prediction (original scale): 105.35, 106.51, 104.43, 105.97, 28272050.00\n",
       "Actual values (original scale): 107.36, 111.45, 107.26, 110.95, 48510000.00\n",
@@ -395,7 +411,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 17
   },
   {
    "metadata": {
@@ -406,27 +422,27 @@
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Calculate daily returns\n",
-    "predicted_returns = np.diff(predictions_original[:, 3]) / predictions_original[:-1, 3]  # Assuming 'Close' is at index 3\n",
-    "actual_returns = np.diff(actuals_original[:, 3]) / actuals_original[:-1, 3]\n",
-    "\n",
-    "# Calculate cumulative returns\n",
-    "predicted_cumulative_return = np.cumprod(1 + predicted_returns) - 1\n",
-    "actual_cumulative_return = np.cumprod(1 + actual_returns) - 1\n",
-    "\n",
-    "# Print cumulative returns\n",
-    "print(f\"Predicted Cumulative Return: {predicted_cumulative_return[-1]:.4f}\")\n",
-    "print(f\"Actual Cumulative Return: {actual_cumulative_return[-1]:.4f}\")\n",
-    "\n",
-    "# Calculate accuracy of prediction using Mean Absolute Error (MAE)\n",
-    "mae = np.mean(np.abs(predictions_original[:, 3] - actuals_original[:, 3]))\n",
-    "print(f\"Mean Absolute Error (MAE): {mae:.4f}\")\n",
-    "\n",
-    "# Calculate accuracy of prediction using Mean Squared Error (MSE)\n",
-    "mse = np.mean((predictions_original[:, 3] - actuals_original[:, 3]) ** 2)\n",
-    "print(f\"Mean Squared Error (MSE): {mse:.4f}\")"
+    "# import numpy as np\n",
+    "# \n",
+    "# # Calculate daily returns\n",
+    "# predicted_returns = np.diff(predictions_original[:, 3]) / predictions_original[:-1, 3]  # Assuming 'Close' is at index 3\n",
+    "# actual_returns = np.diff(actuals_original[:, 3]) / actuals_original[:-1, 3]\n",
+    "# \n",
+    "# # Calculate cumulative returns\n",
+    "# predicted_cumulative_return = np.cumprod(1 + predicted_returns) - 1\n",
+    "# actual_cumulative_return = np.cumprod(1 + actual_returns) - 1\n",
+    "# \n",
+    "# # Print cumulative returns\n",
+    "# print(f\"Predicted Cumulative Return: {predicted_cumulative_return[-1]:.4f}\")\n",
+    "# print(f\"Actual Cumulative Return: {actual_cumulative_return[-1]:.4f}\")\n",
+    "# \n",
+    "# # Calculate accuracy of prediction using Mean Absolute Error (MAE)\n",
+    "# mae = np.mean(np.abs(predictions_original[:, 3] - actuals_original[:, 3]))\n",
+    "# print(f\"Mean Absolute Error (MAE): {mae:.4f}\")\n",
+    "# \n",
+    "# # Calculate accuracy of prediction using Mean Squared Error (MSE)\n",
+    "# mse = np.mean((predictions_original[:, 3] - actuals_original[:, 3]) ** 2)\n",
+    "# print(f\"Mean Squared Error (MSE): {mse:.4f}\")"
    ],
    "id": "1dfc707cd67a9629",
    "outputs": [
